--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.navbar_wrapper a{
+  padding-left: 30px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
